Fixed a minor styling bug with mega footer alignment.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -107,8 +107,7 @@
 */
 .site-mega-footer {
   background-color: lighten($footer-background-color, 5%);
-  padding: $spacing-unit;
-  padding-bottom: $spacing-unit / 2;
+  padding: $spacing-unit 0 $spacing-unit / 2 0;
   border-top: 1px solid $grey-color-dark;
 
   .footer-columns {
